# advent-of-code

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AdventOfCode.sln  LICENSE  README.md  README.rst  build.sbt  pyproject.toml  settings.gradle.kts
.github/: renovate.json
.github/workflows/: 2019.yml
2015/: .gitignore  AdventOfCode2015.sln  solutions.csv
2015/Day01/: Program.fs
2015/Day02/: Input.txt  Program.fs
2015/Day03/: Program.fs
2015/Day04/: Program.fs
2015/Day05/: Input.txt  Program.fs
2015/Day06/: Input.txt  Program.fs
2015/Day07/: Input.txt  Program.fs
2015/fsharp/: AdventOfCode2015.sln
2015/kotlin/: build.gradle.kts  settings.gradle.kts
2015/rust/: Cargo.toml
2016/: AdventOfCode2016.sln  solutions.csv
2016/Day01/: Day01.fsproj  Input.txt  Program.fs
2016/Day02/: Day02.fsproj  Program.fs
2017/: AdventOfCode2017.sln  solutions.csv
2018/: solutions.csv
2019/: .gitignore  README.md  go.mod  go.sum  solutions.csv
2020/: .gitignore  AdventOfCode2020.sln  solutions.csv
2021/: build.gradle.kts  solutions.csv
2022/: solutions.csv
2023/: solutions.csv
2023/python/: pyproject.toml
2023/python/aoc_2023/: day01.py  day01_test.py  day02.py  day02.txt  day02_test.py  day03.py  day03_test.py  day04.py  day04_test.py  day05.py  day05.txt  day05_test.py  day06.py  day06_test.py  day07.py  day07_test.py  day07a.py  day07b.py  day08.py  day08_test.py  day09.py  day09_test.py  day10.py  day10_test.py  day11.py  day11_test.py  day12.py  day12_test.py  day13.py  day13_test.py  day14.py  day14_test.py  day15.py  day15_test.py  day16.py  day16.txt  day16_test.py  day17.py  day17.txt  day17_test.py  (+9 more)
2023/python/aoc_2023/scripts/: generator.py
2023/python/aoc_2023/scripts/templates/: solution.py.j2  test.py.j2
buildSrc/: build.gradle.kts
(+928 files in other folders)
