[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"
packages = [
    { include = "2020/python/aoc_2020" },
    { include = "2023/python/aoc_2023" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
