[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
