[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Sander Ploegsma <sanderploegsma@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
generate = "aoc_2023.scripts.generator:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
